src/objects/ints__Credit_Public_Record__c.object
<CustomObject>
    <fields>
        <fullName>ints__AccountOwnershipType__c</fullName>
        <label>Account Ownership Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__BankruptcyType__c</fullName>
        <label>Bankruptcy Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__BorrowerID__c</fullName>
        <label>Borrower ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CourtName__c</fullName>
        <label>Court Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditFileID__c</fullName>
        <label>Credit File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditPublicRecordID__c</fullName>
        <label>Credit Public Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReport__c</fullName>
        <label>Credit Report</label>
        <referenceTo>ints__Credit_Report__c</referenceTo>
        <relationshipLabel>CreditPublicRecord</relationshipLabel>
        <relationshipName>CreditPublicRecord</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__CreditTradeReferenceID__c</fullName>
        <label>Credit Trade Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DispositionDate__c</fullName>
        <label>Disposition Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DispositionType__c</fullName>
        <label>Disposition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DocketIdentifier__c</fullName>
        <label>Docket Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__FiledDate__c</fullName>
        <label>Filed Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__LegalObligationAmount__c</fullName>
        <label>Legal Obligation Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__ManualUpdateIndicator__c</fullName>
        <label>Manual Update Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__PlaintiffName__c</fullName>
        <label>Plaintiff Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SourceType__c</fullName>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SubscriberCode__c</fullName>
        <label>Subscriber Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Public Record</label>
    <nameField>
        <displayFormat>CPR-{0000000000}</displayFormat>
        <label>Credit Public Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Public Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>